project_002/healthstream/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthstream
  labels:
    app: healthstream
